# rfm-ecommerce

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
notebooks/: 001-RFM-Analysis.ipynb
rfm_ecommerce/: __init__.py  config.py
