[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rfm_ecommerce"
version = "0.0.1"
description = "Ecommerce RFM analysis"
authors = [
  { name = "Ruben Jansen" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"
dependencies = [
    "ipython",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "tqdm",
    "typer",
    "plotly",
    "nbconvert",
    "jupyter",
    "nbstripout"
]

[tool.ruff]
line-length = 99
src = ["rfm_ecommerce"]
include = ["pyproject.toml", "rfm_ecommerce/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["rfm_ecommerce"]
force-sort-within-sections = true

